--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>UTN-FINAL</title>
 </head>
 <body>
-    
+    <nav>
+    <h1>Zu Bar</h1>
+        <ul>
+            <li><a href="nav-pages.html/menu.html" target="_blank">Menu</a></li>
+            <li><a href="nav-pages.html/sucursales.html" target="_blank">Sucursales</a></li>
+            <li><a href="/nav-pages.html/reservas.html" target="_blank">Reservas</a></li>
+            <li><a href="/nav-pages.html/politica.html" target="_blank">Politica</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
