nav-css created, nav-html updated

--- a/nav-pages.html/sucursales.html
+++ b/nav-pages.html/sucursales.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/nav-pages.css/sucursales.css">
     <title>Sucursales</title>
 </head>
 <body>
     <nav>
-        <h1>Zu Bar</h1>
-        <h2>Sucursales</h2>
+        <h1><a href="index.html">Zu Bar</a></h1>
+        <h2><a href="/nav-pages.html/sucursales.html">Sucursales</a></h2>
             <ul>
-                <li><a href="nav-pages.html/menu.html" target="_blank">Menu</a></li>
-                <li><a href="nav-pages.html/sucursales.html" target="_blank">Sucursales</a></li>
+                <li><a href="/nav-pages.html/menu.html" target="_blank">Menu</a></li>
+                <li><a href="/nav-pages.html/sucursales.html" target="_blank">Sucursales</a></li>
                 <li><a href="/nav-pages.html/reservas.html" target="_blank">Reservas</a></li>
                 <li><a href="/nav-pages.html/politica.html" target="_blank">Politica</a></li>
             </ul>
