--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>UTN-FINAL</title>
 </head>
 <body>
-    <nav>
-    <h1><a href="index.html">Zu Bar</a></h1>
-        <ul>
-            <li><a href="nav-pages.html/menu.html" target="_blank">Menu</a></li>
-            <li><a href="nav-pages.html/sucursales.html" target="_blank">Sucursales</a></li>
-            <li><a href="nav-pages.html/reservas.html" target="_blank">Reservas</a></li>
-            <li><a href="nav-pages.html/politica.html" target="_blank">Politica</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <a href="index.html" class="title">Zu Bar</a>
+
+            <nav class="navbar">
+            
+                <a href="nav-pages.html/menu.html" target="_blank">Menu</a>
+                <a href="nav-pages.html/sucursales.html" target="_blank">Sucursales</a>
+                <a href="nav-pages.html/reservas.html" target="_blank">Reservas</a>
+                <a href="nav-pages.html/politica.html" target="_blank">Politica</a>
+                
+            </nav>
+    </header>
 </body>
 </html>
