--- a/nav-pages.html/politica.html
+++ b/nav-pages.html/politica.html
@@ -7,15 +7,17 @@
     <title>Politica</title>
 </head>
 <body>
-    <nav>
-        <h1><a href="index.html">Zu Bar</a></h1>
-        <h2><a href="/nav-pages.html/politica.html">Politica</a></h2>
-            <ul>
-                <li><a href="/nav-pages.html/menu.html" target="_blank">Menu</a></li>
-                <li><a href="/nav-pages.html/sucursales.html" target="_blank">Sucursales</a></li>
-                <li><a href="/nav-pages.html/reservas.html" target="_blank">Reservas</a></li>
-                <li><a href="/nav-pages.html/politica.html" target="_blank">Politica</a></li>
-            </ul>
+    <header class="header">
+        <a href="/index.html" class="title">Zu Bar<a href="/nav-pages.html/politica.html" class="title">Politica</a></a>
+
+        <nav class="navbar">
+            
+            <a href="/nav-pages.html/menu.html" target="_blank">Menu</a>
+            <a href="/nav-pages.html/sucursales.html" target="_blank">Sucursales</a>
+            <a href="/nav-pages.html/reservas.html" target="_blank">Reservas</a>
+            <a href="/nav-pages.html/politica.html" target="_blank">Politica</a>
+            
         </nav>
+    </header>
 </body>
 </html>
