--- a/nav-pages.html/sucursales.html
+++ b/nav-pages.html/sucursales.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="title">Zu Bar<a href="/nav-pages.html/sucursales.html" class="title">Sucursales</a></a>
+        <a href="/nav-pages.html/sucursales.html" class="title">Sucursales</a>
 
 
         <nav class="navbar">
             
+            <a href="/index.html" target="_blank">Home</a>
             <a href="/nav-pages.html/menu.html" target="_blank">Menu</a>
-            <a href="/nav-pages.html/sucursales.html" target="_blank">Sucursales</a>
             <a href="/nav-pages.html/reservas.html" target="_blank">Reservas</a>
             <a href="/nav-pages.html/politica.html" target="_blank">Politica</a>
             
