--- a/nav-pages.html/politica.html
+++ b/nav-pages.html/politica.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="/img/11.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/nav-pages.css/politica.css">
     <title>Politica</title>
