nav-bar updated

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <nav class="navbar">
             
                 <a href="nav-pages.html/menu.html" target="_blank">Menu</a>
-                <a href="nav-pages.html/sucursales.html" target="_blank">Sucursales</a>
-                <a href="nav-pages.html/reservas.html" target="_blank">Reservas</a>
-                <a href="nav-pages.html/politica.html" target="_blank">Politica</a>
+                <a href="nav-pages.html/locations.html" target="_blank">Locations</a>
+                <a href="nav-pages.html/reservations.html" target="_blank">Reservations</a>
+                <a href="nav-pages.html/about-us.html" target="_blank">About Us</a>
+                <a href="nav-pages.html/policy.html" target="_blank">Policy</a>
                 
             </nav>
     </header>
