--- a/nav-pages.html/locations.html
+++ b/nav-pages.html/locations.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="x-icon" href="/img/11.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/nav-pages.css/reservas.css">
-    <title>Reservas</title>
+    <link rel="stylesheet" href="/nav-pages.css/sucursales.css">
+    <title>Locations</title>
 </head>
 <body>
     <header class="header">
-        <a href="/nav-pages.html/reservas.html" class="title">Reservas</a>
+        <a href="/nav-pages.html/locations.html" class="title">Locations</a>
 
         <nav class="navbar">
             
             <a href="/index.html" target="_blank">Home</a>
             <a href="/nav-pages.html/menu.html" target="_blank">Menu</a>
-            <a href="/nav-pages.html/sucursales.html" target="_blank">Sucursales</a>
-            <a href="/nav-pages.html/politica.html" target="_blank">Politica</a>
+            <a href="/nav-pages.html/reservations.html" target="_blank">Reservations</a>
+            <a href="/nav-pages.html/about-us.html" target="_blank">About Us</a>
+            <a href="/nav-pages.html/policy.html" target="_blank">Policy</a>
             
         </nav>
     </header>
