img-slider added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
                 <a href="nav-pages.html/policy.html" target="_blank">Policy</a>
                 
             </nav>
+
     </header>
+
+    <section>
+
+        <div class="slider">
+            <span><img src="img-slider/mixo.jpg" alt=""></span>
+            <span><img src="img-slider/mixo1.jpg" alt=""></span>
+            <span><img src="img-slider/mixo2.jpg" alt=""></span>
+            <span><img src="img-slider/mixo3.jpg" alt=""></span>
+            <span><img src="img-slider/mixo4.jpg" alt=""></span>
+            <span><img src="img-slider/mixo5.jpg" alt=""></span>
+            <span><img src="img-slider/mixo6.jpg" alt=""></span>
+            <span><img src="img-slider/mixo7.jpg" alt=""></span>
+            <span><img src="img-slider/mixo8.jpg" alt=""></span>
+        </div>
+        
+    </section>
 </body>
 </html>
