--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--STYLES-CSS-->
     <link rel="stylesheet" href="styles.css">
-    <title>UTN-FINAL</title>
+    <title>UTN-FINAL1</title>
 </head>
 <body>
     <header class="header">
@@ -37,7 +37,7 @@
             <span><img src="img-slider/mixo7.jpg" alt=""></span>
             <span><img src="img-slider/mixo8.jpg" alt=""></span>
         </div>
-        
+
     </section>
 </body>
 </html>
