everything works well

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--STYLES-CSS-->
     <link rel="stylesheet" href="styles.css">
-    <title>UTN-FINAL1</title>
+    <title>UTN-FINAL</title>
 </head>
 <body>
     <header class="header">
