--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <section>
 
         <div class="slider">
-            <span><img src="img-slider/mixo.jpg" alt=""></span>
-            <span><img src="img-slider/mixo1.jpg" alt=""></span>
-            <span><img src="img-slider/mixo2.jpg" alt=""></span>
-            <span><img src="img-slider/mixo3.jpg" alt=""></span>
-            <span><img src="img-slider/mixo4.jpg" alt=""></span>
-            <span><img src="img-slider/mixo5.jpg" alt=""></span>
-            <span><img src="img-slider/mixo6.jpg" alt=""></span>
-            <span><img src="img-slider/mixo7.jpg" alt=""></span>
-            <span><img src="img-slider/mixo8.jpg" alt=""></span>
+            <span style="--i:0;" ><img src="img-slider/mixo.jpg" alt=""></span>
+            <span style="--i:1;" ><img src="img-slider/mixo1.jpg" alt=""></span>
+            <span style="--i:2;" ><img src="img-slider/mixo2.jpg" alt=""></span>
+            <span style="--i:3;" ><img src="img-slider/mixo3.jpg" alt=""></span>
+            <span style="--i:4;" ><img src="img-slider/mixo4.jpg" alt=""></span>
+            <span style="--i:5;" ><img src="img-slider/mixo5.jpg" alt=""></span>
+            <span style="--i:6;" ><img src="img-slider/mixo6.jpg" alt=""></span>
+            <span style="--i:7;" ><img src="img-slider/mixo7.jpg" alt=""></span>
+            <span style="--i:8;" ><img src="img-slider/mixo8.jpg" alt=""></span>
         </div>
 
     </section>
