--- a/index.html
+++ b/index.html
@@ -23,22 +23,24 @@
                 <a href="nav-pages.html/policy.html" target="_blank">Policy</a>
                 
             </nav>
-
+    <!--NAV BAR END-->
     </header>
 
     <!--SLIDER-->
-    <div class="slider">
+    <main>
+        <div class="slider">
 
-        <span style="--i:1;" ><img src="img-slider/mixo1.jpg" alt=""></span>
-        <span style="--i:3;" ><img src="img-slider/mixo2.jpg" alt=""></span>
-        <span style="--i:3;" ><img src="img-slider/mixo3.jpg" alt=""></span>
-        <span style="--i:4;" ><img src="img-slider/mixo4.jpg" alt=""></span>
-        <span style="--i:5;" ><img src="img-slider/mixo5.jpg" alt=""></span>
-        <span style="--i:6;" ><img src="img-slider/mixo6.jpg" alt=""></span>
-        <span style="--i:7;" ><img src="img-slider/mixo7.jpg" alt=""></span>
-        <span style="--i:8;" ><img src="img-slider/mixo8.jpg" alt=""></span>
-    </div>
-
-
+            <span style="--i:1;" > <img src="img-slider/mixo1.jpg" alt=""> </span>
+            <span style="--i:2;" > <img src="img-slider/mixo2.jpg" alt=""> </span>
+            <span style="--i:3;" > <img src="img-slider/mixo3.jpg" alt=""> </span>
+            <span style="--i:4;" > <img src="img-slider/mixo4.jpg" alt=""> </span>
+            <span style="--i:5;" > <img src="img-slider/mixo5.jpg" alt=""> </span>
+            <span style="--i:6;" > <img src="img-slider/mixo6.jpg" alt=""> </span>
+            <span style="--i:7;" > <img src="img-slider/mixo7.jpg" alt=""> </span>
+            <span style="--i:8;" > <img src="img-slider/mixo8.jpg" alt=""> </span>
+            
+        </div>
+    </main>
+    <!--SLIDER END-->
 </body>
 </html>
