--- a/nav-pages.html/menu.html
+++ b/nav-pages.html/menu.html
@@ -10,16 +10,22 @@
 <body>
     <header class="header">
         <a href="/nav-pages.html/menu.html" class="title">Menu</a>
-
         <nav class="navbar">
-            
             <a href="/index.html" target="_blank">Home</a>
             <a href="/nav-pages.html/locations.html" target="_blank">Locations</a>
             <a href="/nav-pages.html/reservations.html" target="_blank">Reservations</a>
             <a href="/nav-pages.html/about-us.html" target="_blank">About Us</a>
             <a href="/nav-pages.html/policy.html" target="_blank">Policy</a>
-            
         </nav>
     </header>
+    <main>
+        <div class="main-card">
+            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+        </div>
+    </main>
 </body>
 </html>
