--- a/nav-pages.html/menu.html
+++ b/nav-pages.html/menu.html
@@ -19,13 +19,15 @@
         </nav>
     </header>
     <main>
+        <section>
         <div class="main-card">
-            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
-            <div class="boxes"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes-1"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes-2"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes-3"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes-4"><p>Lorem ipsum dolor sit amet.</p></div>
+            <div class="boxes-5"><p>Lorem ipsum dolor sit amet.</p></div>
         </div>
     </main>
+</section>
 </body>
 </html>
