--- a/nav-pages.html/locations.html
+++ b/nav-pages.html/locations.html
@@ -21,5 +21,19 @@
             
         </nav>
     </header>
+
+    <main class="main-box">
+        <div class="content-1">
+            <img src="/img/bar.jpg" alt="front side bar view" width="100px" height="100px" class="frontbar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, numquam voluptas animi repudiandae perferendis magni.</p>
+        </div>
+        <div class="content-2">
+            <img src="/img/rain-bar-vier.jpg" alt="rainy day" width="100px" height="100px">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, numquam voluptas animi repudiandae perferendis magni.</p>
+        </div>
+        <div class="content-3">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, numquam voluptas animi repudiandae perferendis magni.</p>
+        </div>
+    </main>
 </body>
 </html>
